--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "e2e": "ng e2e",
     "run-mobile": "ionic cordova run android --device",
     "ionic-lab": "ionic serve --lab",
-    "build-web": "ionic build --prod"
+    "build-web": "ionic cordova run browser"
   },
   "private": true,
   "dependencies": {
@@ -27,13 +27,16 @@
     "@ionic-native/ble": "^5.13.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.14.0",
+    "@ionic-native/google-maps": "^5.5.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "cordova-android": "8.0.0",
+    "cordova-browser": "6.0.0",
     "cordova-plugin-ble-central": "^1.2.2",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-googlemaps": "^2.6.2",
     "core-js": "^2.5.4",
     "firebase": "^7.2.0",
     "rxjs": "~6.5.1",
@@ -85,10 +88,16 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyAGs7A2TWsI4DBPekp19f9TWz1RA0D-pTI",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
