--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@angular/router": "~8.1.2",
     "@ionic-native/ble": "^5.13.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/device": "^5.15.0",
     "@ionic-native/geolocation": "^5.14.0",
     "@ionic-native/google-maps": "^5.5.0",
+    "@ionic-native/ibeacon": "^5.15.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
@@ -37,6 +39,7 @@
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-googlemaps": "^2.6.2",
+    "cordova-plugin-ibeacon": "^3.8.1",
     "core-js": "^2.5.4",
     "firebase": "^7.2.0",
     "rxjs": "~6.5.1",
@@ -93,7 +96,8 @@
         "API_KEY_FOR_ANDROID": "AIzaSyAGs7A2TWsI4DBPekp19f9TWz1RA0D-pTI",
         "PLAY_SERVICES_VERSION": "15.0.1",
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "com.unarin.cordova.beacon": {}
     },
     "platforms": [
       "android",
