--- a/package.json
+++ b/package.json
@@ -32,10 +32,8 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
-    "com.unarin.cordova.beacon": "^3.8.1",
     "cordova-android": "8.0.0",
     "cordova-browser": "6.0.0",
-    "cordova-plugin-ble-central": "^1.2.4",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-googlemaps": "^2.6.2",
@@ -81,9 +79,7 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-ble-central": {
-        "BLUETOOTH_USAGE_DESCRIPTION": " "
-      },
+      "cordova-plugin-ble-central": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
