--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cordova-plugin-request-location-accuracy": "^2.3.0",
     "core-js": "^2.5.4",
     "firebase": "^7.2.0",
+    "polyline": "^0.2.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
