--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "chart.js": "^2.9.1",
     "com.unarin.cordova.beacon": "^3.8.1",
     "cordova-android": "8.0.0",
     "cordova-browser": "6.0.0",
