infowindow for mobile fixed

--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "cordova-android": "8.0.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-android-permissions": "^1.0.2",
+    "cordova-plugin-ble-central": "^1.2.4",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-googlemaps": "^2.6.2",
     "cordova-plugin-ibeacon": "^3.8.1",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
     "core-js": "^2.5.4",
