--- a/angular.json
+++ b/angular.json
@@ -34,9 +34,13 @@
             "styles": [
               {
                 "input": "src/theme/variables.scss"
+
               },
               {
                 "input": "src/global.scss"
+              },
+              {
+                "input": "node_modules/intro.js/introjs.css"
               }
             ],
             "scripts": []
