--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic-native/geolocation": "^5.14.0",
     "@ionic-native/ibeacon": "^5.15.0",
     "@ionic-native/location-accuracy": "^5.15.1",
+    "@ionic-native/push": "^5.17.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
@@ -47,8 +48,11 @@
     "cordova-plugin-googlemaps": "^2.6.2",
     "cordova-plugin-ibeacon": "^3.8.1",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
+    "cordova-support-google-services": "^1.3.2",
     "core-js": "^2.5.4",
     "firebase": "^7.2.0",
+    "phonegap-plugin-multidex": "^1.0.0",
+    "phonegap-plugin-push": "^2.3.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -111,6 +115,9 @@
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-request-location-accuracy": {
         "PLAY_SERVICES_LOCATION_VERSION": "16.+"
+      },
+      "phonegap-plugin-push": {
+        "SENDER_ID": "838602587969"
       }
     },
     "platforms": [
