--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
     "chart.js": "^2.9.1",
     "com.unarin.cordova.beacon": "^3.8.1",
     "cordova-android": "8.0.0",
@@ -115,7 +116,8 @@
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-request-location-accuracy": {
         "PLAY_SERVICES_LOCATION_VERSION": "16.+"
-      }
+      },
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android",
