--- a/package.json
+++ b/package.json
@@ -53,14 +53,14 @@
         "cordova-support-google-services": "^1.3.2",
         "core-js": "^2.5.4",
         "firebase": "^7.2.0",
-        "intro.js": "^2.9.3",
-        "node": "^13.1.0",
-        "require": "^2.4.20",
         "phonegap-plugin-multidex": "^1.0.0",
         "phonegap-plugin-push": "^2.3.0",
         "rxjs": "~6.5.1",
         "tslib": "^1.9.0",
-        "zone.js": "~0.9.1"
+        "zone.js": "~0.9.1",
+        "intro.js": "^2.9.3",
+        "node": "^13.1.0",
+        "require": "^2.4.20"
     },
     "devDependencies": {
         "@angular-devkit/architect": "~0.801.2",
@@ -73,7 +73,6 @@
         "@angular/language-service": "~8.1.2",
         "@ionic/angular-toolkit": "~2.0.0",
         "@ionic/lab": "2.0.11",
-        "@types/intro.js": "^2.4.5",
         "@types/jasmine": "~3.3.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
@@ -93,7 +92,8 @@
         "protractor": "~5.4.0",
         "ts-node": "~7.0.0",
         "tslint": "~5.15.0",
-        "typescript": "~3.4.3"
+        "typescript": "~3.4.3",
+        "@types/intro.js": "^2.4.5"
     },
     "description": "An Ionic project",
     "cordova": {
@@ -111,7 +111,7 @@
             "cordova-plugin-geolocation": {},
             "cordova-plugin-googlemaps": {
                 "API_KEY_FOR_ANDROID": "AIzaSyAGs7A2TWsI4DBPekp19f9TWz1RA0D-pTI",
-                "PLAY_SERVICES_VERSION": "+",
+                "PLAY_SERVICES_VERSION": "16.+",
                 "ANDROID_SUPPORT_V4_VERSION": "27.+"
             },
             "com.unarin.cordova.beacon": {},
@@ -120,7 +120,7 @@
             },
             "cordova-plugin-android-permissions": {},
             "cordova-plugin-request-location-accuracy": {
-                "PLAY_SERVICES_LOCATION_VERSION": "+"
+                "PLAY_SERVICES_LOCATION_VERSION": "16.+"
             },
             "phonegap-plugin-push": {
                 "SENDER_ID": "838602587969"
