--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
         "@ionic-native/camera": "^5.15.1",
         "@ionic-native/core": "^5.0.0",
         "@ionic-native/device": "^5.15.0",
+        "@ionic-native/file": "^5.18.0",
+        "@ionic-native/file-path": "^5.18.0",
         "@ionic-native/geolocation": "^5.14.0",
         "@ionic-native/ibeacon": "^5.15.0",
+        "@ionic-native/ionic-webview": "^5.18.0",
         "@ionic-native/location-accuracy": "^5.15.1",
         "@ionic-native/push": "^5.17.1",
         "@ionic-native/splash-screen": "^5.0.0",
@@ -45,6 +48,8 @@
         "cordova-plugin-ble-central": "^1.2.4",
         "cordova-plugin-camera": "^4.1.0",
         "cordova-plugin-compat": "^1.2.0",
+        "cordova-plugin-file": "^6.0.2",
+        "cordova-plugin-filepath": "^1.5.6",
         "cordova-plugin-geolocation": "^4.0.2",
         "cordova-plugin-googlemaps": "^2.6.2",
         "cordova-plugin-ibeacon": "^3.8.1",
@@ -53,14 +58,14 @@
         "cordova-support-google-services": "^1.3.2",
         "core-js": "^2.5.4",
         "firebase": "^7.2.0",
-        "phonegap-plugin-multidex": "^1.0.0",
-        "phonegap-plugin-push": "^2.3.0",
-        "rxjs": "~6.5.1",
-        "tslib": "^1.9.0",
-        "zone.js": "~0.9.1",
         "intro.js": "^2.9.3",
         "node": "^13.1.0",
-        "require": "^2.4.20"
+        "phonegap-plugin-multidex": "^1.0.0",
+        "phonegap-plugin-push": "^2.3.0",
+        "require": "^2.4.20",
+        "rxjs": "~6.5.1",
+        "tslib": "^1.9.0",
+        "zone.js": "~0.9.1"
     },
     "devDependencies": {
         "@angular-devkit/architect": "~0.801.2",
@@ -104,9 +109,7 @@
             "cordova-plugin-whitelist": {},
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
-            "cordova-plugin-ionic-webview": {
-                "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-            },
+            "cordova-plugin-ionic-webview": {},
             "cordova-plugin-ionic-keyboard": {},
             "cordova-plugin-geolocation": {},
             "cordova-plugin-googlemaps": {
@@ -125,7 +128,9 @@
             "phonegap-plugin-push": {
                 "SENDER_ID": "838602587969"
             },
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-file": {},
+            "cordova-plugin-filepath": {}
         },
         "platforms": [
             "android",
