--- a/package.json
+++ b/package.json
@@ -19,24 +19,25 @@
         "@angular/common": "~8.1.2",
         "@angular/compiler": "~8.1.2",
         "@angular/core": "~8.1.2",
-        "@angular/fire": "^5.3.0",
+        "@angular/fire": "^5.2.1",
         "@angular/forms": "~8.1.2",
         "@angular/platform-browser": "~8.1.2",
         "@angular/platform-browser-dynamic": "~8.1.2",
         "@angular/router": "~8.1.2",
-        "@ionic-native/android-permissions": "^5.19.1",
-        "@ionic-native/ble": "^5.19.1",
-        "@ionic-native/camera": "^5.19.1",
-        "@ionic-native/core": "^5.19.1",
-        "@ionic-native/device": "^5.19.1",
-        "@ionic-native/geolocation": "^5.19.1",
-        "@ionic-native/ibeacon": "^5.19.1",
-        "@ionic-native/location-accuracy": "^5.19.1",
-        "@ionic-native/splash-screen": "^5.19.1",
-        "@ionic-native/status-bar": "^5.19.1",
-        "@ionic/angular": "^4.11.7",
+        "@ionic-native/android-permissions": "^5.15.1",
+        "@ionic-native/ble": "^5.17.0",
+        "@ionic-native/camera": "^5.15.1",
+        "@ionic-native/core": "^5.0.0",
+        "@ionic-native/device": "^5.15.0",
+        "@ionic-native/geolocation": "^5.14.0",
+        "@ionic-native/ibeacon": "^5.15.0",
+        "@ionic-native/location-accuracy": "^5.15.1",
+        "@ionic-native/push": "^5.17.1",
+        "@ionic-native/splash-screen": "^5.0.0",
+        "@ionic-native/status-bar": "^5.0.0",
+        "@ionic/angular": "^4.7.1",
         "@ionic/storage": "^2.2.0",
-        "chart.js": "^2.9.3",
+        "chart.js": "^2.9.1",
         "com.unarin.cordova.beacon": "^3.8.1",
         "cordova-android": "8.0.0",
         "cordova-browser": "6.0.0",
@@ -50,15 +51,15 @@
         "cordova-plugin-ibeacon": "^3.8.1",
         "cordova-plugin-request-location-accuracy": "^2.3.0",
         "cordova-sqlite-storage": "^4.0.0",
-        "core-js": "^2.6.11",
+        "core-js": "^2.5.4",
         "firebase": "^7.2.0",
-        "intro.js": "^2.9.3",
-        "node": "^13.6.0",
         "phonegap-plugin-multidex": "^1.0.0",
-        "require": "^2.4.20",
-        "rxjs": "^6.5.4",
+        "rxjs": "~6.5.1",
         "tslib": "^1.9.0",
-        "zone.js": "~0.9.1"
+        "zone.js": "~0.9.1",
+        "intro.js": "^2.9.3",
+        "node": "^13.1.0",
+        "require": "^2.4.20"
     },
     "devDependencies": {
         "@angular-devkit/architect": "~0.801.2",
@@ -71,27 +72,27 @@
         "@angular/language-service": "~8.1.2",
         "@ionic/angular-toolkit": "~2.0.0",
         "@ionic/lab": "2.0.11",
-        "@types/intro.js": "^2.4.6",
         "@types/jasmine": "~3.3.8",
-        "@types/jasminewd2": "^2.0.8",
+        "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
-        "codelyzer": "^5.2.1",
-        "cordova-plugin-device": "^2.0.3",
+        "codelyzer": "^5.0.0",
+        "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-ionic-keyboard": "^2.2.0",
-        "cordova-plugin-ionic-webview": "^4.1.3",
-        "cordova-plugin-splashscreen": "^5.0.3",
-        "cordova-plugin-whitelist": "^1.3.4",
+        "cordova-plugin-ionic-webview": "^4.1.1",
+        "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-whitelist": "^1.3.3",
         "jasmine-core": "~3.4.0",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "~4.1.0",
         "karma-chrome-launcher": "~2.2.0",
         "karma-coverage-istanbul-reporter": "~2.0.1",
         "karma-jasmine": "~2.0.1",
-        "karma-jasmine-html-reporter": "^1.5.1",
+        "karma-jasmine-html-reporter": "^1.4.0",
         "protractor": "~5.4.0",
         "ts-node": "~7.0.0",
         "tslint": "~5.15.0",
-        "typescript": "~3.4.3"
+        "typescript": "~3.4.3",
+        "@types/intro.js": "^2.4.5"
     },
     "description": "An Ionic project",
     "cordova": {
@@ -110,6 +111,9 @@
                 "ANDROID_SUPPORT_V4_VERSION": "27.+"
             },
             "cordova-plugin-android-permissions": {},
+            "cordova-plugin-request-location-accuracy": {
+                "PLAY_SERVICES_LOCATION_VERSION": "+"
+            },
             "cordova-sqlite-storage": {}
         },
         "platforms": [
