--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
         "@ionic-native/geolocation": "^5.14.0",
         "@ionic-native/ibeacon": "^5.15.0",
         "@ionic-native/location-accuracy": "^5.15.1",
-        "@ionic-native/push": "^5.17.1",
         "@ionic-native/splash-screen": "^5.0.0",
         "@ionic-native/status-bar": "^5.0.0",
         "@ionic/angular": "^4.7.1",
@@ -53,13 +52,12 @@
         "cordova-sqlite-storage": "^4.0.0",
         "core-js": "^2.5.4",
         "firebase": "^7.2.0",
-        "phonegap-plugin-multidex": "^1.0.0",
-        "rxjs": "~6.5.1",
-        "tslib": "^1.9.0",
-        "zone.js": "~0.9.1",
         "intro.js": "^2.9.3",
         "node": "^13.1.0",
-        "require": "^2.4.20"
+        "require": "^2.4.20",
+        "rxjs": "~6.5.1",
+        "tslib": "^1.9.0",
+        "zone.js": "~0.9.1"
     },
     "devDependencies": {
         "@angular-devkit/architect": "~0.801.2",
@@ -111,9 +109,7 @@
                 "ANDROID_SUPPORT_V4_VERSION": "27.+"
             },
             "cordova-plugin-android-permissions": {},
-            "cordova-plugin-request-location-accuracy": {
-                "PLAY_SERVICES_LOCATION_VERSION": "+"
-            },
+            "cordova-plugin-request-location-accuracy": {},
             "cordova-sqlite-storage": {}
         },
         "platforms": [
