--- a/package.json
+++ b/package.json
@@ -111,7 +111,9 @@
                 "ANDROID_SUPPORT_V4_VERSION": "27.+"
             },
             "cordova-plugin-android-permissions": {},
-            "cordova-plugin-request-location-accuracy": {},
+            "cordova-plugin-request-location-accuracy": {
+                "PLAY_SERVICES_LOCATION_VERSION": "16.+"
+            },
             "cordova-sqlite-storage": {}
         },
         "platforms": [
