--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@ionic-native/device": "^5.15.0",
         "@ionic-native/geolocation": "^5.14.0",
         "@ionic-native/ibeacon": "^5.15.0",
+        "@ionic-native/local-notifications": "^5.19.1",
         "@ionic-native/location-accuracy": "^5.15.1",
         "@ionic-native/splash-screen": "^5.0.0",
         "@ionic-native/status-bar": "^5.0.0",
@@ -41,6 +42,7 @@
         "cordova-android": "8.0.0",
         "cordova-browser": "6.0.0",
         "cordova-plugin-android-permissions": "^1.0.2",
+        "cordova-plugin-badge": "^0.8.8",
         "cordova-plugin-ble-central": "^1.2.4",
         "cordova-plugin-camera": "^4.1.0",
         "cordova-plugin-compat": "^1.2.0",
@@ -48,6 +50,7 @@
         "cordova-plugin-filepath": "^1.5.6",
         "cordova-plugin-geolocation": "^4.0.2",
         "cordova-plugin-ibeacon": "^3.8.1",
+        "cordova-plugin-local-notification": "^0.9.0-beta.2",
         "cordova-plugin-request-location-accuracy": "^2.3.0",
         "cordova-sqlite-storage": "^4.0.0",
         "core-js": "^2.5.4",
@@ -114,7 +117,8 @@
             "cordova-plugin-request-location-accuracy": {
                 "PLAY_SERVICES_LOCATION_VERSION": "16.+"
             },
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-local-notification": {}
         },
         "platforms": [
             "android",
